--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/base": "^5.0.0-beta.17",
     "@mui/icons-material": "^5.14.9",
     "@mui/joy": "^5.0.0-beta.7",
-    "@mui/material": "^5.14.10",
+    "@mui/material": "^5.14.11",
     "emoji-name-map": "^1.2.9",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
