--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.9",
     "@mui/joy": "^5.0.0-beta.7",
     "@mui/material": "^5.14.11",
+    "axios": "^1.5.1",
     "emoji-name-map": "^1.2.9",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
