--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/material": "^5.14.11",
     "axios": "^1.5.1",
     "emoji-name-map": "^1.2.9",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^3.1.2",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
