--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@microsoft/signalr": "^7.0.12",
     "@mui/base": "^5.0.0-beta.17",
     "@mui/icons-material": "^5.14.9",
     "@mui/joy": "^5.0.0-beta.7",
@@ -25,6 +26,7 @@
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
