--- a/.github/workflows/main_antioznuk-web.yml
+++ b/.github/workflows/main_antioznuk-web.yml
@@ -21,11 +21,17 @@ jobs:
         with:
           node-version: '18.x'
 
+      - name: Clear and replace content in apiConfig.tsx
+        run: |
+          echo "" > apiConfig.tsx
+          echo "const API_BASE_URL = 'https://antioznuk-api.azurewebsites.net';" >> apiConfig.tsx
+          echo "export default API_BASE_URL;" >> apiConfig.tsx
+          cat apiConfig.tsx
+
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npx vite build --base=./dist
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
