--- a/.github/workflows/main_antioznuk-web.yml
+++ b/.github/workflows/main_antioznuk-web.yml
@@ -31,7 +31,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run dev build
+          npm run dev build -- --config vite.config.ts
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
