--- a/.github/workflows/main_antioznuk-fe.yml
+++ b/.github/workflows/main_antioznuk-fe.yml
@@ -20,13 +20,19 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16.x'
+      
+      - name: Clear and replace content in apiConfig.tsx
+        run: |
+          echo "" > apiConfig.tsx
+          echo "const API_BASE_URL = 'https://antioznuk-api.azurewebsites.net';" >> apiConfig.tsx
+          echo "export default API_BASE_URL;" >> apiConfig.tsx
+          cat apiConfig.tsx
 
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
-      
+          npm run dev build --base=/
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
