--- a/.github/workflows/main_antioznuk-frontend.yml
+++ b/.github/workflows/main_antioznuk-frontend.yml
@@ -34,7 +34,10 @@ jobs:
           npm run dev build --base=/
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./dist -r
+        run: |
+              cd dist
+              zip ../release.zip * -r
+              cd ..
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
