--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.14.11",
     "axios": "^1.5.1",
     "emoji-name-map": "^1.2.9",
+    "gif-picker-react": "^1.3.2",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
